# Bugaoshan

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  pubspec.yaml  settings.gradle.kts
.githooks/: pre-commit
android/: settings.gradle.kts
assets/: academic_calendar.json  eula.md  webview_error.html
composeApp/: build.gradle.kts
gradle/: libs.versions.toml
lib/: app.dart  main.dart  theme.dart
linux/: CMakeLists.txt
local/zikzak_inappwebview_windows/windows/: CMakeLists.txt  zikzak_in_app_web_view_windows.cpp
local/zikzak_inappwebview_windows/windows/include/zikzak_inappwebview_windows/: zikzak_in_app_web_view_windows.h
server/: build.gradle.kts
shared/: build.gradle.kts
test/: academic_calendar_cache_test.dart  academic_calendar_page_test.dart  academic_calendar_test.dart  add_widget_picker_test.dart  auth_logger_test.dart  auth_scoped_indexed_stack_test.dart  balance_query_provider_test.dart  balance_trend_calculator_test.dart  beijing_time_test.dart  calendar_event_utils_test.dart  ccyl_api_retry_test.dart  ccyl_auth_generation_test.dart  ccyl_auth_principal_test.dart  class_schedule_inquiry_detail_test.dart  class_week_parser_test.dart  classroom_model_test.dart  cookie_client_test.dart  course_provider_test.dart  download_manager_test.dart  download_path_index_test.dart  exam_plan_test.dart  grades_provider_test.dart  grades_tabs_test.dart  grid_logic_test.dart  ics_service_test.dart  payapp_session_expiry_test.dart  plan_completion_provider_test.dart  (+10 more)
(+401 files in other folders)
